- fixed haproxy.cfg backend service domain.

--- a/config/haproxy.cfg
+++ b/config/haproxy.cfg
@@ -62,7 +62,7 @@ defaults
     option forwardfor
     option httpchk HEAD / HTTP/1.1\r\nHost:localhost
     option http-server-close
-    server web01 weather_1:8080/
+    server web01 weather_backend_1:8080/
     http-request add-header X-Forwarded-Proto https if { ssl_fc }
 
 
