--- a/Dockerfile-dev
+++ b/Dockerfile-dev
@@ -1,6 +1,6 @@
-FROM openjdk:11-jre-slim-stretch
+FROM openjdk:8-jre-slim-stretch
 WORKDIR /
 COPY ["target/weather.jar", "weather.jar"]
 EXPOSE 8080
 EXPOSE 5005
-CMD sleep 5 && java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005 -jar weather.jar
+CMD sleep 5 && java -agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=5005 -jar weather.jar
